z-index fix

--- a/source/stylesheets/modules/_nav.scss
+++ b/source/stylesheets/modules/_nav.scss
@@ -4,7 +4,7 @@ nav {
   left: 0;
   width: 100%;
   height: 50px;
-  z-index: 9999;
+  z-index: 500;
   background-color: #fff;
   box-shadow:0 2px 6px rgba(0,0,0,0.1);
   .container {
